[gd_scene load_steps=17 format=2]

[ext_resource path="res://OnClick/SpotDiffWorld1.gd" type="Script" id=1]
[ext_resource path="res://OnClick/images/STDImg3.1.png" type="Texture" id=2]
[ext_resource path="res://OnClick/images/STDImg3.jpg" type="Texture" id=3]
[ext_resource path="res://OnClick/Diff_1.gd" type="Script" id=4]
[ext_resource path="res://OnClick/images/red_circle.png" type="Texture" id=5]
[ext_resource path="res://OnClick/Diff2.gd" type="Script" id=6]
[ext_resource path="res://OnClick/Diff3.gd" type="Script" id=7]
[ext_resource path="res://OnClick/Diff4.gd" type="Script" id=8]
[ext_resource path="res://OnClick/Diff5.gd" type="Script" id=9]
[ext_resource path="res://OnClick/Diff6.gd" type="Script" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 14.1421

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 20.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 60, 30 )

[sub_resource type="CircleShape2D" id=5]
radius = 30.0

[sub_resource type="CapsuleShape2D" id=6]
radius = 60.0
height = 0.0

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 920, 350 )
z_index = -10
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 300, 350 )
z_index = -10
texture = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 610, 350 )
current = true
zoom = Vector2( 1.9, 1.95 )

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 480, 150 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1100, 150 )
shape = SubResource( 1 )

[node name="diff_1_a" type="Sprite" parent="Area2D"]
visible = false
position = Vector2( 480, 150 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 5 )

[node name="diff_1_b" type="Sprite" parent="Area2D"]
visible = false
position = Vector2( 1100, 150 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 5 )

[node name="Area2D2" type="Area2D" parent="."]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 330, 290 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 950, 290 )
shape = SubResource( 2 )

[node name="diff_2_a" type="Sprite" parent="Area2D2"]
visible = false
position = Vector2( 330.438, 288.313 )
scale = Vector2( 0.0820816, 0.0713519 )
texture = ExtResource( 5 )

[node name="diff_2_b" type="Sprite" parent="Area2D2"]
visible = false
position = Vector2( 950, 290 )
scale = Vector2( 0.0820816, 0.0713519 )
texture = ExtResource( 5 )

[node name="Area2D3" type="Area2D" parent="."]
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2( 130, 80 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D3"]
position = Vector2( 750, 80 )
shape = SubResource( 3 )

[node name="diff_3_a" type="Sprite" parent="Area2D3"]
visible = false
position = Vector2( 130, 80 )
scale = Vector2( 0.207082, 0.207082 )
texture = ExtResource( 5 )

[node name="diff_3_b" type="Sprite" parent="Area2D3"]
visible = false
position = Vector2( 750, 80 )
scale = Vector2( 0.207082, 0.207082 )
texture = ExtResource( 5 )

[node name="Area2D4" type="Area2D" parent="."]
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D4"]
position = Vector2( 470, 270 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D4"]
position = Vector2( 1090, 270 )
shape = SubResource( 4 )

[node name="diff_4_a" type="Sprite" parent="Area2D4"]
visible = false
position = Vector2( 470, 270 )
scale = Vector2( 0.585837, 0.171137 )
texture = ExtResource( 5 )

[node name="diff_4_b" type="Sprite" parent="Area2D4"]
visible = false
position = Vector2( 1090, 270 )
scale = Vector2( 0.585837, 0.171137 )
texture = ExtResource( 5 )

[node name="Area2D5" type="Area2D" parent="."]
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D5"]
position = Vector2( 450, 590 )
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D5"]
position = Vector2( 1080, 590 )
shape = SubResource( 5 )

[node name="diff_5_a" type="Sprite" parent="Area2D5"]
visible = false
position = Vector2( 450, 590 )
scale = Vector2( 0.285408, 0.285408 )
texture = ExtResource( 5 )

[node name="diff_5_b" type="Sprite" parent="Area2D5"]
visible = false
position = Vector2( 1080, 590 )
scale = Vector2( 0.285408, 0.285408 )
texture = ExtResource( 5 )

[node name="Area2D6" type="Area2D" parent="."]
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D6"]
position = Vector2( 70, 480 )
shape = SubResource( 6 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D6"]
position = Vector2( 690, 480 )
shape = SubResource( 6 )

[node name="diff_6_a" type="Sprite" parent="Area2D6"]
visible = false
position = Vector2( 71.625, 485.875 )
scale = Vector2( 0.52897, 0.292918 )
texture = ExtResource( 5 )

[node name="diff_6_b" type="Sprite" parent="Area2D6"]
visible = false
position = Vector2( 690, 480 )
scale = Vector2( 0.52897, 0.292918 )
texture = ExtResource( 5 )
[connection signal="input_event" from="Area2D" to="Area2D" method="_on_Area2D_input_event"]
[connection signal="visibility_changed" from="Area2D/diff_1_a" to="." method="_on_diff_1_a_visibility_changed"]
[connection signal="visibility_changed" from="Area2D/diff_1_a" to="Area2D" method="_on_diff_1_a_visibility_changed"]
[connection signal="input_event" from="Area2D2" to="Area2D2" method="_on_Area2D2_input_event"]
[connection signal="visibility_changed" from="Area2D2/diff_2_a" to="." method="_on_diff_2_a_visibility_changed"]
[connection signal="visibility_changed" from="Area2D2/diff_2_a" to="Area2D2" method="_on_diff_2_a_visibility_changed"]
[connection signal="input_event" from="Area2D3" to="Area2D3" method="_on_Area2D3_input_event"]
[connection signal="visibility_changed" from="Area2D3/diff_3_a" to="." method="_on_diff_3_a_visibility_changed"]
[connection signal="visibility_changed" from="Area2D3/diff_3_a" to="Area2D3" method="_on_diff_3_a_visibility_changed"]
[connection signal="input_event" from="Area2D4" to="Area2D4" method="_on_Area2D4_input_event"]
[connection signal="visibility_changed" from="Area2D4/diff_4_a" to="." method="_on_diff_4_a_visibility_changed"]
[connection signal="visibility_changed" from="Area2D4/diff_4_a" to="Area2D4" method="_on_diff_4_a_visibility_changed"]
[connection signal="input_event" from="Area2D5" to="Area2D5" method="_on_Area2D5_input_event"]
[connection signal="visibility_changed" from="Area2D5/diff_5_a" to="." method="_on_diff_5_a_visibility_changed"]
[connection signal="visibility_changed" from="Area2D5/diff_5_a" to="Area2D5" method="_on_diff_5_a_visibility_changed"]
[connection signal="input_event" from="Area2D6" to="Area2D6" method="_on_Area2D6_input_event"]
[connection signal="visibility_changed" from="Area2D6/diff_6_a" to="." method="_on_diff_6_a_visibility_changed"]
[connection signal="visibility_changed" from="Area2D6/diff_6_a" to="Area2D6" method="_on_diff_6_a_visibility_changed"]
